<resources>
    <string name="app_name">PourUnMondeEveille</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_titre">Bonjour Intervenant</string>
    <string name="nav_sous_titre">OBNL Monde Éveillé - Québec</string>

    <string name="nav_a_propos">À propos</string>
    <string name="nav_familles">Familles</string>
    <string name="nav_enfants">Enfants</string>
    <string name="nav_creer_compte">Créer un compte</string>
    <string name="nav_modifier_informations_compte">Modifier les informations du compte</string>

    <string name="bienvenue">Bienvenue !</string>
    <string name="connexion">CONNEXION</string>
    <string name="deconnexion">déconnexion</string>
    <string name="creation_compte">CRÉER UN COMPTE INTERVENANT</string>

    <string name="authentification">Authentification</string>
    <string name="nom_utilisateur">Nom d\'utilisateur</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="titre_creation_compte">Créer un compte intervenant</string>

    <string name="en_attente_accueil">En attente d\'accueil</string>




    <string name="logo_content_description">Logo de l\'organisation</string>
    <string name="nom_de_l_organisation">Monde Éveillé</string>
    <string name="OBNL">Organisation à but non lucratif</string>
    <string name="mission">La mission est d\'accompagner tous les jeunes, âgés de 6 à 25 ans, dans leurs réalisations scolaires, sportives et professionnelles, au Canada et en Afrique.</string>
    <string name="vision">La vision est que Monde Éveillé soit connu et reconnu comme un leader dans la communauté en tant qu\'acteur d\'influence positive et mobilisateur auprès des jeunes, favorisant ainsi l\'atteinte de leur plein potentiel. D\'ici 2027, Monde Éveillé souhaite avoir un impact auprès de 10 000 jeunes.</string>



</resources>