<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/side_nav_bar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Logo de l'organisation -->
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo_content_description"
            android:src="@drawable/logo_monde_eveille" />

        <!-- Nom de l'organisation -->
        <TextView
            android:id="@+id/organizationNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_gravity="center"
            android:text="@string/nom_de_l_organisation"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <!-- Nom de l'organisation -->
        <TextView
            android:id="@+id/obnlTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_gravity="center"
            android:text="@string/OBNL"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <!-- Vision de l'organisation -->
        <TextView
            android:id="@+id/organizationVisionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/vision"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!-- Mission de l'organisation -->
        <TextView
            android:id="@+id/organizationMissionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/mission"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
</ScrollView>
