<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tableau_de_bord">

    <fragment
        android:id="@+id/nav_tableau_de_bord"
        android:name="com.example.pourunmondeeveille.ui.apropos.AProposFragment"
        android:label="@string/nav_a_propos"
        tools:layout="@layout/fragment_a_propos" />

    <fragment
        android:id="@+id/nav_familles"
        android:name="com.example.pourunmondeeveille.ui.familles.FamillesFragment"
        android:label="@string/nav_familles"
        tools:layout="@layout/fragment_familles">
        <action
            android:id="@+id/action_specific_to_profileFamilleFragment"
            app:destination="@id/profileFamilleFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_enfants"
        android:name="com.example.pourunmondeeveille.ui.enfants.EnfantFragment"
        android:label="@string/nav_enfants"
        tools:layout="@layout/fragment_enfants" />

    <fragment
        android:id="@+id/profileFamilleFragment"
        android:name="com.example.pourunmondeeveille.ui.familles.ProfileFamilleFragment"
        android:label="Profile de la famille"/>
</navigation>