<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.creationcompte.CreationCompteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/creationComteTextView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/titre_creation_compte"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextNomUtilisateur"
            android:layout_width="280dp"
            android:layout_height="70dp"
            android:hint="@string/nom_utilisateur"
            android:inputType="textEmailAddress" />

        <!-- Champ pour le courriel -->
        <EditText
            android:id="@+id/editTextCourriel"
            android:layout_width="280dp"
            android:layout_height="70dp"
            android:hint="Courriel"
            android:inputType="textEmailAddress" />

        <!-- Champ pour le mot de passe -->
        <EditText
            android:id="@+id/editTextMotDePasse"
            android:layout_width="280dp"
            android:layout_height="70dp"
            android:hint="@string/mot_de_passe"
            android:inputType="textPassword" />

        <!-- Champ pour la confirmation du mot de passe -->
        <EditText
            android:id="@+id/editTextConfirmerLeMotDePasse"
            android:layout_width="280dp"
            android:layout_height="70dp"
            android:hint="Confirmer le mot de passe"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnCreationCompte"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/creation_compte" />

        <!-- TextView pour afficher les erreurs -->
        <TextView
            android:id="@+id/error_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp"
            android:visibility="gone" />

    </LinearLayout>

</FrameLayout>